fixed link alignement

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1096,21 +1096,13 @@ h3 {
   }
 
   .use-content .picture {
-    padding-left: 0;
+    padding-left: 30px;
     width: 88%;
   }
 
-  .use-content a, .use-content a {
-    padding-left: 0;
-    width: auto;
-    margin: auto;
-    font-size: 14px;
-    margin-top: 20px;
-    display: block;
-    text-align: center;
-    color: #595959;
-    margin-left: 0; 
-    margin-bottom: 50px;
+  .use-content a {
+    left: 0;
+    font-size: 12px;
   }
 
   .chart-big {
@@ -1136,7 +1128,6 @@ h3 {
     margin-bottom: 60px;
   }
 }
-
 
 
 
